Time: 14 ms (96.12%), Space: 97.7 MB (91.36%) - LeetHub