@@ -2,11 +2,11 @@ class Solution {
     List<List<Integer>> answer = new ArrayList<>();
 
     public List<List<Integer>> combine(int n, int k) {
-        dfs(n, k, new ArrayList<>());
+        dfs(n, k, 1, new ArrayList<>(k));
         return answer;
     }
 
-    private void dfs(int n, int k, List<Integer> current) {
+    private void dfs(int n, int k, int start, List<Integer> current) {
         if (current.size() == k) {
             answer.add(new ArrayList<>(current));
             return;
@@ -14,10 +14,10 @@ class Solution {
 
         int remaining = k - current.size();
 
-        for(int i = current.isEmpty() ? 1 : current.get(current.size()-1) + 1; i <= n; i++) {
+        for (int i = start; i <= n - remaining + 1; i++) {
             current.add(i);
-            dfs(n, k, current);
-            current.removeLast();
+            dfs(n, k, i + 1, current);
+            current.remove(current.size() - 1);
         }
     }
 }
